# HoundShield

./: .gitignore  .gitmodules  .mcp.json.example  AUDIT-2026-06-20.md  BACKLOG.md  CLAUDE.local.md.example  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DESIGN.md  HERMES.md  LEARNED-RULES.md  PRE-LAUNCH-AUDIT-2026-06-21.md  PROJECT-STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  STATE.md  STRATEGY.md  commit-sync.sh  fix-fable-model.sh  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.ts  vitest.config.ts
.claude/: README.md  launch.json  settings.json  settings.local.json.example  statusline.sh
.github/: dependabot.yml
.playwright-mcp/: page-2026-05-20T06-47-10-454Z.yml  page-2026-05-20T06-48-51-393Z.yml
FUTUREPARK/: HoundShield_ CMMC Compliance Market Audit and 13-Day Launch Plan.md  KAELUS-BEAST-PROMPT.md  MOVED-TO-FutureUse.md  README.md  houndshield-demo.html
FutureApp/: README.md  ROADMAP.md  launch-app.sh
FutureUse/: CLAUDE copy.md  HoundShield.html  README copy.md  README.md
HERMES-REDESIGN/: CLAUDE-CODE-PORT-PROMPT.md  GO-LIVE-RUNBOOK.md  HERMES-HANDOFF.md  HOUNDSHIELD-AUDIT-AND-PLAN.md  LEVEL-UP-INSTALL-GUIDE.md
OldVersions/: README.md
__tests__/: budget.test.ts  pricing.test.ts
abraham-mirror/: .fuse_hidden0000000400000002  about.php.html  apply.php.html  breakthrough-advisory.php.html  breakthrough-for-teams.php.html  breakthrough-immersion.php.html  breakthrough-partnerships.php.html  breakthrough-thinking.php.html  contact.php.html  membership.php.html  private-breakthrough-deep-dive.php.html  robots.txt
advisory/: cold-outreach-batch-1.md
app/: not-found.tsx  page.tsx
archive/legacy-projects/Brain.Ai-main/VedicBrain/: docker-compose.prod.yml  docker-compose.yml  pyproject.toml
archive/legacy-projects/Brain.Ai-main/VedicBrain/benchmarks/: eval_suite.py
archive/legacy-projects/Brain.Ai-main/VedicBrain/docker/: Dockerfile.api  Dockerfile.inference  nginx.conf
archive/legacy-projects/Brain.Ai-main/VedicBrain/vedic_brain/config/: settings.py
assets/: CURRENT_SITUATION_REPORT.md  MASTER_HERMES_PROMPT.md
brain/: BrainData.md  research.md
compliance-firewall-agent/: .env.example  .eslintrc.json  LAUNCH-CHECKLIST.md  eslint.config.mjs  middleware.ts  next.config.js  node_modules  package-lock.json  package.json  push-and-pr.sh  tailwind.config.js  tsconfig.json  vitest.setup.ts
components/: GlobalChat.tsx  Navbar.tsx
docs/: ALL MY DATA .md  AUDIT-2026-05-12.md  BEAST-FINAL-SYNTHESIS.md  BEAST-PHASE2-EVOLUTION.html  CLAUDE-CODE-LAYOUT.md  CONSOLE-TIERS.md  DASHBOARD-DESIGN-STUDIO.md  DASHBOARD-REDESIGN-AURORA.md  DEMO-SCRIPT.md  DIRECTION-A-PORT.md  EMAIL-SEQUENCES.md  FAQ-SYSTEM.md  FOUNDER-ACTIONS-2026-07-04.md  (+27 more)
(+868 files in other folders)
