[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vedic-brain"
version = "1.0.0"
description = "VedicBrain.AI — Sovereign General-Purpose AI Platform for Kaelus.Online"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Kaelus.Online" }]

dependencies = [
    # Core async / web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "sse-starlette>=2.1.0",

    # Model inference
    "openai>=1.50.0",           # OpenAI-compat client for vLLM / Ollama
    "tiktoken>=0.7.0",
    "transformers>=4.45.0",
    "tokenizers>=0.20.0",

    # Data / validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",

    # Auth / security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",

    # Rate limiting / caching
    "redis[hiredis]>=5.1.0",
    "limits>=3.13.0",

    # CLI
    "typer[all]>=0.12.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.47",

    # Tools / utilities
    "python-dotenv>=1.0.1",
    "ripgrepy>=2.0.0",
    "aiofiles>=24.1.0",
    "python-dateutil>=2.9.0",
    "jinja2>=3.1.4",
    "orjson>=3.10.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",

    # MCP
    "mcp>=1.2.0",

    # Analytics / telemetry
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",

    # Stripe billing
    "stripe>=10.12.0",

    # Web tools
    "playwright>=1.47.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",

    # Benchmark / eval
    "datasets>=3.0.0",
    "evaluate>=0.4.3",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.10.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "httpx>=0.27.0",
]
gpu = [
    "vllm>=0.6.0",
    "torch>=2.4.0",
    "accelerate>=0.34.0",
]

[project.scripts]
vedic = "vedic_brain.cli.main:app"
vedic-api = "vedic_brain.api.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["vedic_brain*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
